artifacts/build_logs/build_log_3.txt
warning: C:\Projects\Fusion - Programming Language\registry\crates\tensor-sparse\Cargo.toml: `default-features` is ignored for fusion_core, since `default-features` was not specified for `workspace.dependencies.fusion_core`, this could become a hard error in the future
warning: C:\Projects\Fusion - Programming Language\registry\crates\finite-fields\Cargo.toml: `default-features` is ignored for fusion_core, since `default-features` was not specified for `workspace.dependencies.fusion_core`, this could become a hard error in the future
warning: C:\Projects\Fusion - Programming Language\registry\crates\finite-fields\Cargo.toml: `default-features` is ignored for fusion_std, since `default-features` was not specified for `workspace.dependencies.fusion_std`, this could become a hard error in the future
    Checking fusion-core v0.2.0 (C:\Projects\Fusion - Programming Language\registry\crates\fusion-core)
error[E0432]: unresolved import `crate::value`
 --> registry\crates\fusion-core\src\compiler\chunk.rs:1:12
  |
1 | use crate::value::Value;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `serde_json::value`

error[E0432]: unresolved import `crate::ast`
 --> registry\crates\fusion-core\src\compiler\compiler.rs:1:12
  |
1 | use crate::ast::*;
  |            ^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::ast`

error[E0432]: unresolved import `crate::chunk`
 --> registry\crates\fusion-core\src\compiler\compiler.rs:2:12
  |
2 | use crate::chunk::OpCode;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::chunk`

error[E0432]: unresolved import `crate::function`
 --> registry\crates\fusion-core\src\compiler\compiler.rs:3:12
  |
3 | use crate::function::Function;
  |            ^^^^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::function`

error[E0432]: unresolved import `crate::value`
 --> registry\crates\fusion-core\src\compiler\compiler.rs:4:12
  |
4 | use crate::value::Value;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `serde_json::value`

error[E0432]: unresolved import `crate::chunk`
 --> registry\crates\fusion-core\src\compiler\function.rs:1:12
  |
1 | use crate::chunk::Chunk;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::chunk`

error[E0432]: unresolved import `crate::token`
 --> registry\crates\fusion-core\src\compiler\lexer.rs:1:12
  |
1 | use crate::token::{Span, SpannedToken, Token};
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::token`

error[E0432]: unresolved import `crate::ast`
 --> registry\crates\fusion-core\src\compiler\parser.rs:1:12
  |
1 | use crate::ast::*;
  |            ^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::ast`

error[E0432]: unresolved import `crate::lexer`
 --> registry\crates\fusion-core\src\compiler\parser.rs:2:12
  |
2 | use crate::lexer::Lexer;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::lexer`

error[E0432]: unresolved import `crate::token`
 --> registry\crates\fusion-core\src\compiler\parser.rs:3:12
  |
3 | use crate::token::{SpannedToken, Token};
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::token`

error[E0432]: unresolved import `crate::ast`
 --> registry\crates\fusion-core\src\compiler\semantic.rs:1:12
  |
1 | use crate::ast::Type;
  |            ^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::ast`

error[E0432]: unresolved import `crate::ast`
 --> registry\crates\fusion-core\src\compiler\type_checker.rs:1:12
  |
1 | use crate::ast::*;
  |            ^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::ast`

error[E0432]: unresolved import `crate::semantic`
 --> registry\crates\fusion-core\src\compiler\type_checker.rs:2:12
  |
2 | use crate::semantic::{Scope, SymbolInfo};
  |            ^^^^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::semantic`

error[E0432]: unresolved import `crate::ast`
 --> registry\crates\fusion-core\src\compiler\typechecker.rs:1:12
  |
1 | use crate::ast::Program;
  |            ^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::ast`

error[E0432]: unresolved import `crate::error`
 --> registry\crates\fusion-core\src\compiler\typechecker.rs:2:12
  |
2 | use crate::error::CompilerError;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `core::error`

error[E0432]: unresolved import `crate::chunk`
 --> registry\crates\fusion-core\src\vm.rs:1:12
  |
1 | use crate::chunk::OpCode;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::chunk`

error[E0432]: unresolved import `crate::function`
 --> registry\crates\fusion-core\src\vm.rs:2:12
  |
2 | use crate::function::Function;
  |            ^^^^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `compiler::function`

error[E0432]: unresolved import `crate::value`
 --> registry\crates\fusion-core\src\vm.rs:3:12
  |
3 | use crate::value::Value;
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `serde_json::value`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `fusion-core` (lib) due to 18 previous errors
